--- a/styles/global.css
+++ b/styles/global.css
@@ -4,7 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.font-sans {
+/* .font-sans {
     font-family: 'Inter', sans-serif;
     font-weight: 400;
 }
@@ -28,7 +28,7 @@
 
 .w-80{
     width: 10vw;
-}
+} */
 
 .bg{
     background-color: #f0f0f3;
